fix max-width on container in order for content to be properly sized on mobile screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,12 +25,12 @@ body {
     margin: auto;
     color: honeydew;
     width: 100%;
-    padding: 20px 2em 3em 2em;
+    padding: 20px 1.2em 3em 1.2em;
 }
 
 .container {
     margin: auto;
-    max-width: 700px;
+    max-width: 600px;
 }
 
 .header {
@@ -329,6 +329,7 @@ textarea:active {
 }
 
 /*MEDIA QUERIES*/
+
 @media screen and (max-width: 1200px) {
     h1 {
         font-weight: 400;
@@ -443,7 +444,6 @@ textarea:active {
 @media screen and (max-width: 425px) {
     .container {
         margin-bottom: 6vh;
-        width: 80%;
     }
 
     .header {
@@ -492,7 +492,6 @@ textarea:active {
     .container {
         margin-bottom: 2vh;
         margin-top: 0;
-        width: 85%;
     }
 
     h1 {
